src/styles/portfolio-page.scss
.portfolio-jumbotron {

  height: 100vh;
  text-align: center;

  h1 {
    font-weight: 600;
    color: white;
    // Fluit typography
    //font-size: calc([minimum size] + ([maximum size] - [minimum size]) * ((100vw - [minimum viewport width]) / ([maximum viewport width] - [minimum viewport width])));
    font-size: calc(64px + (180 - 64) * ((100vw - 320px) / (1600 - 320)));
    // min font : 64px
    // max font : 180px;
    // min size : 320px
    // max width : 1800px

    position: relative;
    top: 50%;
    transform: translateY(-50%);
    -webkit-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
  }
}

.portfolio-list {
  height: 100vh;
  padding: 0 15% 0 15%;

  // @media screen and (max-width: 400px) {
  //   padding: 6rem 10% 0 10%;
  // }

  h1 {
    font-size: calc(64px + (80 - 64) * ((100vw - 320px) / (1600 - 320)));
    padding-top: 6rem;
    // min font : 4rem
    // max font : 5rem
    // min size : 320px
    // max width : 1800px
  }

  .post-list {
    display: grid;
    grid-template-columns: repeat(5,1fr); //TODO: We might need to make this more responsive
    grid-gap: 1rem;
    margin: 2rem 0;

    @media screen and (max-width: 1500px) {
      grid-template-columns: repeat(4,1fr);
    }

    @media screen and (max-width: 1200px) {
      grid-template-columns: repeat(3,1fr);
    }

    @media screen and (max-width: 900px) {
      grid-template-columns: repeat(2,1fr);
    }

    a {
      img {
        border-radius: 0.5rem;
        width: 200px;
        height: 200px;
        object-fit: cover;

        @media screen and (max-width: 550px) {
          width: 100px;
          height: 100px;
        }
      }
    }
  }
}

